# farma-django

./: .gitignore  MANUAL_PROYECTO.md  README.md  REFACTORIZACION.md  corrector_automatico.py  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py  context_processors.py  db_utils.py  forms.py  mixins.py  models.py  services.py  urls.py  views.py
core/management/commands/: cargar_datos.py  sync_db.py
core/migrations/: 0001_initial.py  0002_preferencia.py  0003_oportunidad_farmacia_id.py  0004_perfilfarmacia.py  0005_oportunidad_codigo_nacional.py  0006_alter_oportunidad_options_preferencia_farmacia_id_and_more.py
core/templates/core/: base.html  base_sin_sidebar.html  buscador.html  configuracion.html  dashboard.html  datos_brutos.html  entrenamiento.html  examen.html  importar.html
core/templates/registration/: login.html
core/templatetags/: farma_filters.py
efp/: apps.py  models.py  services.py  urls.py  views.py
efp/data/: efp_fotos.csv  efp_grupos.json
efp/management/commands/: descargar_fotos_efp.py
efp/migrations/: 0001_initial.py  0002_alter_oportunidadefp_options_and_more.py  0003_oportunidadefp_codigo_nacional.py  0004_preferenciaefp.py  0005_oportunidadefp_efp_oportun_farmaci_8d5429_idx.py
efp/templates/efp/: buscador.html  configuracion.html  dashboard.html  datos_brutos.html  entrenamiento.html  examen.html
efp/templatetags/: efp_tags.py
